# GoGoGo

./: .gitignore  CMakeLists.txt  README.md  README.txt
gogame/: CMakeLists.txt
gogame/src/: main.cpp
gogame/src/logic/: Board.cpp  Board.h  GameState.cpp  GameState.h  util.h
gogame/src/render/: Board.cpp  Board.h  DrawContext.h  DrawableItem.h  GoModel.cpp  GoModel.h  Informations.cpp  Informations.h  Stone.cpp  Stone.h  utilities.cpp  utilities.h
lib/glew-2.1.0/: glew.pc
lib/glfw-3.2.1/: CMakeLists.txt
lib/nanovg/: CMakeLists.txt
